# trebnic

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
flet_local_notifications/: pyproject.toml
flet_local_notifications/src/flet_local_notifications/: __init__.py  flet_local_notifications.py
flet_local_notifications/src/flet_local_notifications.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
flet_local_notifications/src/flutter/flet_local_notifications/: pubspec.yaml
flet_local_notifications/src/flutter/flet_local_notifications/lib/: flet_local_notifications.dart
flet_local_notifications/src/flutter/flet_local_notifications/lib/src/: extension.dart  notifications_service.dart
insights/: android-build-fix.md  android-db-sync.md  android-notifications.md  android_notification_fix.md  architecture-pitfalls.md  async-dialog-callbacks.md  async-patterns.md  auth-flow-patterns.md  biometric-auth-implementation.md  circular-slider-apk-build.md  cloudflare-feedback-proxy.md  color-picker-evaluation.md  dual-api-refactoring.md  encryption-implementation.md  feedback-email.md  flet-0.80-migration.md  flet-async-event-handlers.md  flet-stt-integration.md  flet_mobile_build.md  grayscreenflash.md  mobile-button-tap-debugging.md  notification-guide.md  notification-service-implementation.md  notification_extension_migration.md  notification_extension_status.md  notification_learnings.md  possible_issues.md  reordering_learnings.md  shitty_notes.md  tech_debts.md  testing-singletons-and-db-path.md  trebnic-api-guide.md  ui-ux-issues.md
tests/: conftest.py  test_api.py  test_notifications.py
trebnic/: api.py  app.py  config.py  constants.py  core.py  database.py  draggable.md  events.py  flet_mobile_build.md  formatters.py  helpers.py  i18n.py  main.py  models.py  pyproject.toml  registry.py  requirements.txt  task_list_view.py
trebnic/database/: __init__.py  core.py  data_ops.py  helpers.py  notifications.py  records.py  tasks.py
trebnic/insights/: stats-weekly-chart.md
trebnic/models/: __init__.py  entities.py
trebnic/services/: __init__.py  auth.py  claude_service.py  crypto.py  daily_notes_service.py  logic.py  notification_service.py  project_service.py  recurrence.py  settings_service.py  state_manager.py  stats.py  time_entry_service.py  timer.py
trebnic/ui/: __init__.py  app_initializer.py  auth_controller.py  controller.py  helpers.py  navigation.py  timer_controller.py
trebnic/ui/components/: __init__.py  duration_knob.py  project_sidebar_item.py  task_tile.py  timer_widget.py
trebnic/ui/dialogs/: __init__.py  auth_dialogs.py  base.py  dialog_state.py  project_dialogs.py  task_dialogs.py
trebnic/ui/formatters/: __init__.py  time_formatter.py
trebnic/ui/handlers/: __init__.py  task_action_handler.py
trebnic/ui/pages/: __init__.py  calendar_view.py  chat_view.py  feedback_view.py  help_view.py  note_editor_view.py  notes_view.py  profile_view.py  stats_view.py  task_view.py  time_entries_view.py
trebnic/ui/presenters/: __init__.py  task_presenter.py
