[project]
name = "trebnic" 
version = "1.0.0"
description = "Trebnic"
authors = [
    {name = "alex-stoica",email = "alexstoica@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet[build] (>=0.28.3,<0.29.0)",
    "aiosqlite (>=0.19.0,<1.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api" 

[tool.flet]
org = "ai.stoica"
product = "Trebnic"

[tool.flet.app]
module = "main"
source_dir = "trebnic" 
