[project]
name = "trebnic"
version = "0.1.0"
description = "Privacy-first task manager with timer tracking, recurring tasks, and calendar view"
authors = [
    {name = "Alex Stoica", email = "alexstoica@protonmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["task-manager", "todo", "timer", "productivity", "flet", "privacy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Other Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]
dependencies = [
    "flet>=0.80.0",
    "aiosqlite>=0.19.0",
    "cryptography>=46.0.3",
    "argon2-cffi>=25.1.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.2.1",

    "plyer>=2.1.0",
    "flet-android-notifications (==0.2.0)",
    "flet-circular-slider (>=0.4.0)",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.urls]
Homepage = "https://github.com/alex-stoica/trebnic"
Repository = "https://github.com/alex-stoica/trebnic"
Issues = "https://github.com/alex-stoica/trebnic/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flet]
org = "ai.stoica"
product = "Trebnic"

[tool.flet.app]
module = "main"
path = "trebnic"

[tool.flet.android.permission]
"android.permission.POST_NOTIFICATIONS" = true
"android.permission.SCHEDULE_EXACT_ALARM" = true
"android.permission.RECEIVE_BOOT_COMPLETED" = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["trebnic"]
