[project]
name = "flet-local-notifications"
version = "0.1.0"
description = "Flet extension for native local notifications"
requires-python = ">=3.10"
dependencies = [
    "flet>=0.80.0",
]

[tool.setuptools.package-data]
"flutter.flet_local_notifications" = ["**/*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
