[project]
name = "trebnic"
version = "0.1.0"
description = "Privacy-first task manager"
requires-python = ">=3.12"

[tool.flet]
org = "ai.stoica"
product = "Trebnic"

[tool.flet.android.permission]
"android.permission.POST_NOTIFICATIONS" = true

[tool.poetry.dependencies]
python = ">=3.12"
python-dateutil = "^2.9.0.post0"
aiosqlite = ">=0.19.0"
cryptography = ">=41.0.0"
argon2-cffi = ">=23.0.0"
plyer = ">=2.1.0"
certifi = ">=2024.0.0"
httpx = ">=0.28.0"
flet = "^0.80.4"
